enhance the pwa and many functinality

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Lumina Gallery</title>
 
     <!-- PWA manifest will be injected automatically by vite-plugin-pwa -->
+    <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="apple-touch-icon" href="/icon-192.png" />
   </head>
   <body
